<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="@dimen/DEFAULT_PADDING"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/label_mode"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="1"
            android:text="@string/SETTING_SELECT_MODE" />

        <RadioGroup
            android:id="@+id/mode_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/radio_vs_ai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/MODE_VS_COMPUTER" />

            <RadioButton
                android:id="@+id/radio_vs_human"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MODE_VS_HUMAN" />

            <RadioButton
                android:id="@+id/radio_investigation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MODE_INVESTIGATION" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/label_human_first"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="1"
            android:text="@string/SETTING_PLAYER_FIRST" />

        <CheckBox
            android:id="@+id/check_player_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:checked="true"
            android:paddingRight="@dimen/padding_small" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/label_hint"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="1"
            android:text="@string/SETTING_ENABLE_HINT" />

        <CheckBox
            android:id="@+id/check_enable_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:checked="true"
            android:paddingRight="@dimen/padding_small" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/label_forbidden"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="1"
            android:text="@string/SETTING_ENABLE_BAN" />

        <CheckBox
            android:id="@+id/check_enable_ban"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:checked="true"
            android:paddingRight="@dimen/padding_small" />
    </LinearLayout>

</LinearLayout>