<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small" >

        <LinearLayout
            android:id="@+id/player_infor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/padding_medium"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/piece_player1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/DEFAULT_PADDING"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/black" />

                <TextView
                    android:id="@+id/label_player1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/PLAYER_HUMAN"
                    android:textColor="@color/COLOR_BLACK" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/piece_player2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/DEFAULT_PADDING"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/white" />

                <TextView
                    android:id="@+id/label_player2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/PLAYER_COMPUTER"
                    android:textColor="@color/COLOR_BLACK" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/icon_infor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/padding_small"
            android:contentDescription="@string/app_name"
            android:src="@drawable/information" />
    </RelativeLayout>

    <com.fiveinrow.chessboard.ChessBoardView
        android:id="@+id/chess_board"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_margin="@dimen/DEFAULT_PADDING"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_small"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/icon_new_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/new_game" />

        <ImageView
            android:id="@+id/icon_undo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/undo" />

        <ImageView
            android:id="@+id/icon_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/hint" />

        <ImageView
            android:id="@+id/icon_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/setting" />
    </LinearLayout>

</LinearLayout>